# rwd-ie-optimizer

./: .env copy.example  .env.vercel.example  .gitignore  .vercelignore  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOY_NOW.md  DEPLOY_SPLIT.md  IMPLEMENTATION_PLAN.md  QUICKSTART.md  README.md  README_REFACTORED.md  REFACTORING_SUMMARY.md  VERCEL_CHECKLIST.md  api_server.py  api_server_refactored.py  claude.md  cyan_theme_updates.css  demo_run.py  full_demo.py  main.py  pyproject.toml  render.yaml  requirements.txt  skills.md  start.sh  synthetic_rwd_claims_data (1).xlsx  test_ai_chat.json  test_api.py  test_chat_request.json  vercel.json
api/: index.py
scripts/: create_database.py
src/: agent_runtime.py  main.py
src/agents/: agents.py
src/api/: __init__.py  routes.py
src/config/: config.py  settings.py
src/config/prompts/: coding_agent.txt  deep_research.txt  ie_interpreter.txt  orchestrator.txt  receiver.txt  sql_runner.txt
src/models/: criteria_dsl.py  resolved_concepts.py  sql_bundle.py
src/services/: __init__.py  ai_service.py  funnel_service.py
src/tools/: artifact_store.py  catalog.py  concept_search.py  sql_executor.py  unit_resolver.py
src/utils/: database.py
static/: config.js  index.html
tests/fixtures/: sample_criteria.txt
