[project]
name = "rwd-ie-optimizer"
version = "0.1.0"
description = "Convert clinical trial I/E criteria to SQL over Real-World Data"
requires-python = ">=3.11"
authors = [
    {name = "RWD IE Optimizer Team"}
]
readme = "README.md"

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.55.0",
    "anthropic>=0.18.1",
    "aiosqlite>=0.19.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "mangum>=0.17.0",
    "python-multipart>=0.0.6",
    "httpx>=0.27.0",
    "typing-extensions>=4.9.0",
    "rich>=13.9.0",
    "typer>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
rwd-ie = "src.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
